2009-02-13  Dan Williams  <dcbw@redhat.com>

	* nm-pptp-service.conf
		- Clean up dbus permissions; retain deny for compat with older dbus

2009-02-09  Dan Williams  <dcbw@redhat.com>

	Patch from Russell Suter <rsuter@mxlogic.com>

	* src/nm-pptp-service.c
		- (impl_pptp_service_need_secrets): domain logins only need one
			'\'

2009-02-06  Dan Williams  <dcbw@redhat.com>

	Patch from Russell Suter <rsuter@mxlogic.com>

	* properties/advanced-dialog.c
		- (advanced_dialog_new_hash_from_dialog): fix saving MPPE values

2008-12-13  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* src/nm-pptp-pppd-plugin.c:
	* src/nm-pptp-service.h:
	* properties/advanced-dialog.h:
	* auth-dialog/gnome-two-password-dialog.c:
	* auth-dialog/gnome-two-password-dialog.h: Cleared up gtk and glib includes
	to use only toplevel headers. Bug #564376.

2008-12-11  Dan Williams  <dcbw@redhat.com>

	* Split into separate repository

2008-11-29  Dan Williams  <dcbw@redhat.com>

	* properties/nm-pptp.c
		- (auth_methods_setup, advanced_dialog_new_hash_from_dialog): add EAP
			to the auth method list

2008-11-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-service.c
		- (construct_pppd_args): send username to server (bgo #561941)

2008-11-04  Dan Williams  <dcbw@redhat.com>

	Fix bgo #559152

	* src/nm-pptp-pppd-plugin.c
		- (nm_ip_up): remote peer's address is the PTP address, not the external
			gateway address

	* src/nm-pptp-service.c
		- (construct_pppd_args): allow easier PPP debugging
		- (service_ip4_config_cb): insert the VPN gateway's public IP address
			into the IP4 config
		- (real_connect, real_disconnect, state_changed_cb, dispose): cache
			the connection so that the VPN gateway's public IP address can be
			retrieved from it when the IP4 config comes back from pppd

2008-10-26  Dan Williams  <dcbw@redhat.com>

	* properties/nm-pptp.c
		- Update for setting accessor changes

2008-10-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-service.c